changed title in index from Front end developer to JS Eng

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1 id="title">Navya</h1>
-							<p>Front End Developer</p>
+							<p>JavaScript Engineer</p>
 						</div>
 
 					<!-- Nav -->
