--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Navya</strong></h2>
 								<p>Pursued Master's in Computer Science at Northwest Missouri State University.</p>
-								<p>Looking for Full Time Opportunities in Software Development.</p>
+								<p>UI Developer at PayPal.</p>
 							</header>
 						</div>
 					</section>
@@ -71,6 +71,15 @@
 							</header>
 							<p>A brief list of my work</p>
 							<div class="row">
+							<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="https://github.com/S525079/partyguardweb" class="image fit"><img src="images/brc.PNG" alt="BRC" /></a>
+										<header>
+											<h3>Business Resource Center, this application is designed for users to managing and growing business. </h3>
+										</header>
+									</article>
+									
+								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="https://github.com/S525079/partyguardweb" class="image fit"><img src="images/pg_home.PNG" alt="" /></a>
