02/21/2025 Updated index.html

--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
 		<section id="top" class="one dark cover">
 			<div class="container">
 				<header>
-					<h2 class="alt">Hi! I'm <strong>Navya</strong></h2>
-					<p>Uster Interface Developer working remotely from San Jose.</p>
+					<h2 class="alt">Hi! I'm <strong>Navya.</strong> Nice to meet you.</h2>
+					<p>User Interface Developer working remotely from Austin, TX.</p>
 					<p>Pursued Master's in Computer Science at Northwest Missouri State University - (2016).</p>
+					<p>I like to code things from scratch, and enjoy bringing ideas to life in the browser.</p>
 				</header>
 			</div>
 		</section>
@@ -141,8 +142,21 @@
 				</header>
 				<p>I'm a Frontend Developer. With experience in developing user interfaces for internal and external
 					applications.
-					I worked in banking, e-commerce and finance domains. My tech stack is HTML5, CSS3, JavaScript,
-					React, RestAPI.
+					
+					
+					I’m a developer passionate about crafting accessible, pixel-perfect user interfaces that blend
+					thoughtful design with robust engineering. My favorite work lies at the intersection of design 
+					and development, creating experiences that not only look great but are meticulously built for 
+					performance and usability.
+					I worked in finance, agriculture, banking and e-commerce domains. My tech stack is HTML5, CSS3, JavaScript,
+					ReactJS, RestAPI, Nodejs, Next.js, AngularJS.
+
+                                  Currently, I'm a UI Developer and UX Engineer at Allied Solutions, specializing in building responsive
+					web applications and reusable components. I contribute to the creation and maintenance of custom reusable UI 
+					component library that power Allied’s frontend, ensuring our platform meets web accessibility standards
+					and best practices to deliver an inclusive user experience.
+
+                                   In my spare time, I usually do crafts, gardening, and play with my little one.
 				</p>
 
 			</div>
@@ -168,7 +182,7 @@
 
 		<!-- Copyright -->
 		<ul class="copyright">
-			<li>&copy; 2022</li>
+			<li>&copy; 2025</li>
 		</ul>
 
 	</div>
