02/21/2025 Update index.html

--- a/index.html
+++ b/index.html
@@ -84,13 +84,15 @@
 					<div class="12u 12u$(mobile)">
 						<article class="item">
 							<header>
-								<h3>Worked on collecting requirements, mock design, implementation of design
-									using react, testing and deploying the code.Developed User Interfaces for
-									applications
-									using HTML5, React.js, JavaScript. Styled pages using CSS3, flexbox, AntD,
-									MaterialUI, BootStrap in
-									different projects. Consumed data from RestAPI using react axios, JavaScript fetch.
-								</h3>
+								<h3>I worked in finance, agriculture, banking and e-commerce domains. 
+									My tech stack is HTML5, CSS3, JavaScript, ReactJS, RestAPI, Nodejs, 
+									Next.js, AngularJS.
+									<br>
+
+					                        Currently, I'm a UI Developer and UX Engineer at Allied Solutions, specializing in building responsive
+								web applications and reusable components. I contribute to the creation and maintenance of custom reusable UI 
+								component library that power Allied’s frontend, ensuring our platform meets web accessibility standards
+								and best practices to deliver an inclusive user experience.</h3>
 							</header>
 						</article>
 
@@ -140,21 +142,12 @@
 				<header>
 					<h2>About Me</h2>
 				</header>
-				<p>I'm a Frontend Developer. With experience in developing user interfaces for internal and external
-					applications.
-					
-					
-					I’m a developer passionate about crafting accessible, pixel-perfect user interfaces that blend
+				<p>
+					I’m a Frontend developer passionate about crafting accessible, pixel-perfect user interfaces that blend
 					thoughtful design with robust engineering. My favorite work lies at the intersection of design 
 					and development, creating experiences that not only look great but are meticulously built for 
 					performance and usability.
-					I worked in finance, agriculture, banking and e-commerce domains. My tech stack is HTML5, CSS3, JavaScript,
-					ReactJS, RestAPI, Nodejs, Next.js, AngularJS.
-
-                                  Currently, I'm a UI Developer and UX Engineer at Allied Solutions, specializing in building responsive
-					web applications and reusable components. I contribute to the creation and maintenance of custom reusable UI 
-					component library that power Allied’s frontend, ensuring our platform meets web accessibility standards
-					and best practices to deliver an inclusive user experience.
+					<br>
 
                                    In my spare time, I usually do crafts, gardening, and play with my little one.
 				</p>
