--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
 								<h3>I worked in finance, agriculture, banking and e-commerce domains. 
 									My tech stack is HTML5, CSS3, JavaScript, ReactJS, RestAPI, Nodejs, 
 									Next.js, AngularJS.
-									<br>
-
 					                        Currently, I'm a UI Developer and UX Engineer at Allied Solutions, specializing in building responsive
 								web applications and reusable components. I contribute to the creation and maintenance of custom reusable UI 
 								component library that power Allied’s frontend, ensuring our platform meets web accessibility standards
@@ -146,10 +144,7 @@
 					I’m a Frontend developer passionate about crafting accessible, pixel-perfect user interfaces that blend
 					thoughtful design with robust engineering. My favorite work lies at the intersection of design 
 					and development, creating experiences that not only look great but are meticulously built for 
-					performance and usability.
-					<br>
-
-                                   In my spare time, I usually do crafts, gardening, and play with my little one.
+					performance and usability. In my spare time, I usually do crafts, gardening, and play with my little one.
 				</p>
 
 			</div>
