added professional experience

--- a/index.html
+++ b/index.html
@@ -84,13 +84,46 @@
 					<div class="12u 12u$(mobile)">
 						<article class="item">
 							<header>
-								<h3>I worked in finance, agriculture, banking and e-commerce domains. 
-									My tech stack is HTML5, CSS3, JavaScript, ReactJS, RestAPI, Nodejs, 
-									Next.js, AngularJS.
-					                        Currently, I'm a UI Developer and UX Engineer at Allied Solutions, specializing in building responsive
-								web applications and reusable components. I contribute to the creation and maintenance of custom reusable UI 
-								component library that power Allied’s frontend, ensuring our platform meets web accessibility standards
-								and best practices to deliver an inclusive user experience.</h3>
+								<h3>Allied Solutions</h3>
+								<p>Digital Lending Application – Developed responsive web pages using semantic 
+									HTML and custom components, ensuring a seamless user experience. 
+									Contributed to the custom component library, enhancing reusability and 
+									consistency across the application. Played a key role in efficiently 
+									delivering UI components to the software engineering team within tight deadlines. 
+									<b>Tech stack: React, Redux, Next.js, TypeScript.</b>
+								</p>
+								<br>
+								<h3>Driscolls Inc</h3>
+								<p>Successfully worked on multiple projects simultaneously, demonstrating strong 
+									multitasking and problem-solving skills. Led the migration of projects 
+									to the latest version of the component library, implementing enhancements 
+									and improving maintainability. Refactored duplicate code by creating 
+									reusable components, optimizing performance and consistency. 
+									Provided critical support for bug fixes during testing to ensure a smooth 
+									user experience. Developed and enhanced key UI features, including pagination, 
+									dynamic tables, new table filters, forms, and API integrations. 
+									Documented development processes and implementation details to 
+									improve project transparency and knowledge sharing.</p>
+								<br>
+								<h3>Walmart Labs</h3>
+								<p>Successfully developed the project from scratch as the sole UI developer, 
+									delivering it within the timeline. Designed and implemented a scalable 
+									front-end architecture using React, Redux, and Ant Design, ensuring 
+									seamless integration with REST APIs. Took ownership of CI/CD pipelines, 
+									streamlining deployments and enhancing development efficiency. 
+									Collected and managed APIs for end-to-end testing of order management 
+									workflows. Maintained and monitored Grafana dashboards for tracking 
+									E2E automation testing APIs, ensuring system reliability and performance. 
+									Proactively handled additional tasks as assigned, contributing to the 
+									overall success of the project.</p>
+								<br>
+								<h3>Paypal</h3>
+								<p>Kickstarted my journey in real-world projects at PayPal, where I honed my 
+									skills in React.js, CSS styling, and semantic HTML. Gained valuable experience 
+									in code reviews, best practices, and corporate development workflows. 
+									Successfully contributed to the project without missing a single sprint goal. 
+									Focused on enhancing responsiveness and ensuring accessibility compliance, 
+									improving the overall user experience.</p>
 							</header>
 						</article>
 
